--- a/PDFDOU/pom.xml
+++ b/PDFDOU/pom.xml
@@ -24,9 +24,9 @@
 						<index>true</index>
 						<manifest>
 							<addClasspath>true</addClasspath>
-							 <mainClass>
-							 	br.org.baixadou.MainClass
-							 </mainClass>
+							<mainClass>
+								br.org.baixadou.MainClass
+							</mainClass>
 						</manifest>
 						<manifestEntries>
 							<mode>development</mode>
@@ -44,6 +44,22 @@
 		<!-- <artifactId>js</artifactId> -->
 		<!-- <version>1.7R2</version> -->
 		<!-- </dependency> -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>args4j</groupId>
+			<artifactId>args4j</artifactId>
+			<version>2.0.29</version>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.pdfbox</groupId>
 			<artifactId>pdfbox</artifactId>
